[package]
name = "shader-slang"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the Slang shader language compiler"
publish = false
repository = "https://github.com/brussig-tud/slang-rs.git"
license = "MIT OR Apache-2.0"
categories = ["compilers", "api-bindings"]

[profile.dev.build-override]
debug = true

[dependencies]
shader-slang-sys = {path="slang-sys", version="0.1.0"}

[features]
default = []

## Add serde support to many API objects
serde = ["shader-slang-sys/serde"]

## Enable custom, Rust-side implementations for some COM interfaces used by Slang.
com_impls = []

## If this feature is enabled, the required *Slang* shared libs will be copied to the binary crate output location of the
## current build.
copy_libs = ["shader-slang-sys/copy_libs"]

## If this feature is enabled, download of a matching *Slang* binary release for the current target architecture will be
## attempted in case the `SLANG_DIR` environment variable does not point to the location of a valid Slang package.
## This feature is problematic on Windows (see `force_on_windows` below)
download_slang_binaries = ["shader-slang-sys/download_slang_binaries"]

## If this feature is enabled, an attempt to build a matching *Slang* binary release from source will be made for the
## current target architecture *iff* all the following conditions are met:
## * `SLANG_DIR` environment variable does not point to the location of a valid *Slang* package
## * if the `download_slang_binaries` feature is enabled, no binary release could be successfully downloaded. This
### This feature is problematic on Windows (see `force_on_windows` below)
build_slang_from_source = ["shader-slang-sys/build_slang_from_source"]

[workspace]
members = ["slang-sys"]
