[package]
name = "slang-sys"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
links = "slang"

[build-dependencies]
bindgen = "*"
reqwest = {version="*", features=["blocking"]}
zip-extract = "*"
bytes = "*"

[features]
default = []
copy_libs = []
download_slang_binaries = []
build_slang_from_source = []
